# UrbanEyeHb

./: README.md  package.json  requirements.txt  start-project.bat  start-project.ps1  vercel.json
Front/: URBAN EYE BASE.html  admin.html  config.js  config.prod.example.js  eggcellent.html  index.html
Front/scripts/: admin.js  analysis.js  app.js  map.js  viewer3d.js
Front/styles/: admin.css  main.css
UrbanEye-X/urbaneye_x_package/: README.md  bit_trans.py  distillation.py  geo_mae.py  requirements.txt  sar_drn_encoder.py
UrbanEye-X/urbaneye_x_package/losses/: composite_loss.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  urbaneye.db
backend/api/: index.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  contact.py  copernicus.py  health.py  home.py  reports.py  satellite.py  upload.py
backend/app/core/: config.py  database.py
backend/app/interfaces/: __init__.py
backend/app/models/: database.py
backend/app/schemas/: auth.py  common.py  contact.py  copernicus.py  reports.py
backend/app/services/: copernicus_service.py  email_service.py  report_service.py  satellite_service.py
backend/archive/node-legacy/: package-lock.json  package.json  server.js
backend/tests/: test_health.py
satellite/urbaneye_satellite_files/: urbaneye_satellite_CONFIG.json  urbaneye_satellite_ELECTRICAL_CONNECTIONS.json  urbaneye_satellite_GUIDE.md  urbaneye_satellite_MECHANICAL_CONNECTIONS.json  urbaneye_satellite_PARTS.csv
