[project]
name = "urban-eye-backend"
version = "0.1.0"
description = "FastAPI backend for UrbanEye Copernicus proxy"
requires-python = ">=3.11"
dependencies = [
	"fastapi==0.115.12",
	"uvicorn[standard]==0.30.6",
	"httpx==0.27.2",
	"pydantic-settings==2.6.1",
	"python-dotenv==1.0.1",
	"sqlalchemy==2.0.36",
	"alembic==1.14.0",
	"python-multipart==0.0.20",
	"aiofiles==24.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
